Cleaned up the controller by moving data to models